# IdleSchemes.Api/openapispec.json
@@ -1166,14 +1166,10 @@
           "class": {
             "$ref": "#/components/schemas/PublicTicketClass"
           },
-          "remainingCount": {
+          "all": {
             "type": "integer",
             "format": "int32",
             "nullable": true
-          },
-          "all": {
-            "type": "integer",
-            "format": "int32"
           },
           "confirmed": {
             "type": "integer",
@@ -1189,6 +1185,11 @@
               "$ref": "#/components/schemas/PublicAvailableTicket"
             },
             "nullable": true
+          },
+          "actualAvailableCount": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
           }
         }
       },
@@ -1201,10 +1202,6 @@
               "$ref": "#/components/schemas/PublicTicketClassCollection"
             },
             "nullable": true
-          },
-          "all": {
-            "type": "integer",
-            "format": "int32"
           },
           "confirmed": {
             "type": "integer",
